--- a/8 - ImagensnoHTML.html
+++ b/8 - ImagensnoHTML.html
@@ -1,12 +1,12 @@
 <!-- Imagens no HTML -->
 
-<img src="./puta dos sonhos.jpg"/ 
+<img src="./foto2.jpg"/ 
 alt="mulher-prostituta"
 height="400px"
 />
 
 <figure>
-    <img src="./img/puta.jpg"
+    <img src="./img/foto1.jpg"
     width="400px"/>
     <figcaption>Foto da Puta</figcaption>
 </figure>
